# vcml-pydrofoil

./: .gitignore  LICENSE  build.sh  gluecode.py  notes.md  pydrofoilcapi.h  testmain.c
sysc_vp/: CMakeLists.txt  Makefile  elf.txt
sysc_vp/benchmark/: riscv64_ex.cfg
sysc_vp/include/: core.h  memory_callbacks.h  python_tasks.h  system.h
sysc_vp/src/: core.cpp  main.cpp  memory_callbacks.cpp  python_tasks.cpp  system.cpp
